fix: update github profile to enable preview features and process lombok annotation